[metadata]
name = procServUtils
version = 2.9.1-dev
author = Ralph Lange
author_email = ralph.lange@gmx.de
description = Support scripts for procServ
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: GNU GPLv3
    Operating System :: Unix
project_urls =
    "Homepage" = "https://github.com/ralphlange/procServ"
    "Bug Tracker" = "https://github.com/ralphlange/procServ/issues"

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6.8
package_dir =
    =.
packages = find:

[options.entry_points]
console_scripts =
    manage-procs = procServUtils.manage:entrypoint
    procServ-launcher = procServUtils.launch:entrypoint
